<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="32dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_title"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginBottom="64dp" />

    <!--  Login Button -->
    <Button
        android:id="@+id/btnToLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_to_login"
        android:textSize="18sp"
        android:layout_marginBottom="16dp" />


    <Button
        android:id="@+id/btnToRegister"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/btn_to_register"
        android:textSize="18sp"
        android:backgroundTint="#4CAF50"
        android:textColor="#FFFFFF" />

</LinearLayout>